--- a/css/index.css
+++ b/css/index.css
@@ -153,7 +153,7 @@ body.dark .lightswitch {
 }
 
 .header h2 {
-	color: var(--acc1); font-family: Fjalla One; font-size: 5.5vw;
+	color: var(--acc1); font-family: Fjalla One; font-size: 4.8em;
 }
 
 .desc {
@@ -252,7 +252,7 @@ h3 {
 	body {line-height: 3.5em;}
 	.header {width: 100% !important;}
 	.header span {font-size: 3em; margin-left: 0 !important;}
-	.header h2 {font-size: 10vw;}
+	.header h2 {font-size: 6em;}
 	.desc {margin-left: 0; width: 100%; font-size: 2.5em;}
   .desc span:hover:after {opacity: 0;}
   .grid {width: 100% !important;}
