--- a/css/index.css
+++ b/css/index.css
@@ -206,7 +206,7 @@ body.dark .lightswitch {
 }
 
 h3 {
-  text-transform: uppercase; font-family: Fjalla One; font-size: 1.7vw;
+  text-transform: uppercase; font-family: Fjalla One; font-size: 1.8em;
 }
 
 .scroll-text h3 {
@@ -251,9 +251,10 @@ h3 {
 @media only screen and (max-width: 700px) {
 	body {line-height: 3.5em;}
 	.header {width: 100% !important;}
-	.header span {font-size: 3em; margin-left: 0 !important;}
+	.header span {font-size: 2em; margin-left: 0 !important;}
 	.header h2 {font-size: 6em;}
 	.desc {margin-left: 0; width: 100%; font-size: 2.5em;}
   .desc span:hover:after {opacity: 0;}
   .grid {width: 100% !important;}
+  .h3 {font-size: 4em;}
 }
