--- a/css/index.css
+++ b/css/index.css
@@ -249,12 +249,16 @@ h3 {
 
 /** MEDIA QUERIES **/
 @media only screen and (max-width: 700px) {
-	body {line-height: 3.5em;}
-	.header {width: 100% !important;}
+	body {line-height: 4em;}
+	#wrapper {margin-top: 15vw;}
+	.section {margin-top: 15vw;}
+	.header {width: 100%;}
 	.header span {font-size: 2em; margin-left: 0 !important;}
-	.header h2 {font-size: 6em;}
-	.desc {margin-left: 0; width: 100%; font-size: 2.5em;}
-  .desc span:hover:after {opacity: 0;}
-  .grid {width: 100% !important;}
-  .h3 {font-size: 4em;}
+	.header h2 {font-size: 10em;}
+	.desc {margin-left: 0; width: 100%; font-size: 2.5em; margin-top: 30vw;}
+	.desc span:hover:after {opacity: 0;}
+	.grid {width: 100% !important;}
+	.grid i {font-size: 6em;}
+	h3 {font-size:4em;}
+	.section.frow .desc {margin-top: 10vw;}
 }
