--- a/css/index.css
+++ b/css/index.css
@@ -249,7 +249,8 @@ h3 {
 
 /** MEDIA QUERIES **/
 @media only screen and (max-width: 700px) {
-	body {line-height: 4em;}
+	body {line-height: 4em; background-image: url(bg1-rot.png);}
+	body.dark {background-image: url(bg2-rot.png);}
 	#wrapper {margin-top: 15vw;}
 	.section {margin-top: 15vw;}
 	.header {width: 100%;}
