--- a/css/index.css
+++ b/css/index.css
@@ -262,4 +262,5 @@ h3 {
 	.grid i {font-size: 6em;}
 	h3 {font-size:4em;}
 	.section.frow .desc {margin-top: 0;}
+	.footer {width: 70vw; font-size: 2em;}
 }
