--- a/css/index.css
+++ b/css/index.css
@@ -251,6 +251,8 @@ h3 {
 @media only screen and (max-width: 700px) {
 	body {line-height: 4em; background-image: url(bg1-rot.png);}
 	body.dark {background-image: url(bg2-rot.png);}
+	#navbar {background-image: url(bg1-rot.png);}
+	body.dark #navbar {background-image: url(bg1-rot.png);}
 	#wrapper {margin-top: 15vw;}
 	.section {margin-top: 15vw;}
 	.header {width: 100%;}
