--- a/css/index.css
+++ b/css/index.css
@@ -249,12 +249,13 @@ h3 {
 
 /** MEDIA QUERIES **/
 @media only screen and (max-width: 845px) {
-	body {line-height: 4em; background-image: url(bg1-rot.png);}
+	body {line-height: 4em; background-image: url(bg1-rot.png); width: 100%;}
 	body.dark {background-image: url(bg2-rot.png);}
-	#navbar {background-image: url(bg1-rot.png);}
+	#navbar {background-image: url(bg1-rot.png); font-size: 3em; height: 10vw;}
 	body.dark #navbar {background-image: url(bg2-rot.png);}
 	#wrapper {margin-top: 15vw;}
 	.section {margin-top: 15vw;}
+	.section:first-of-type {margin-top: 35vw !important; margin-bottom: 25vw;}
 	.header {width: 100%; margin-top: 2vw;}
 	.header span {font-size: 2em; margin-left: 0 !important;}
 	.header h2 {font-size: 10em;}
