--- a/css/experience.css
+++ b/css/experience.css
@@ -13,6 +13,13 @@ body.dark {
 	--brd1: 1px solid rgba(var(--bg1) / var(--op85));
 }
 
+::-webkit-scrollbar {
+	background: rgba(var(--bg1) / var(--op85)); width: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: rgba(var(--bg2) / var(--op85));
+}
 
 body, html {
 	width: 100%; height: 100%; margin: 0;
